# uassistant

./: .gitattributes  README.md  pyproject.toml  requirements.txt
src/uassistant/: core.py  main.py  rag.py  utils.py
